--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -332,6 +332,7 @@ input:invalid, textarea:invalid {
   justify-content: center;
   gap: 5px;
   width: max-content;
+  min-width: 200px;
   padding: 20px 35px;
   border: 0;
   border-radius: 50px;
