--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -414,9 +414,7 @@
       top: 0;
       left: 0;
       right: 0;
-      min-height: 200px;
-      height: 20.5vw;
-      max-height: 295px;
+      height: 295px;
       width: 100%;
       border-radius: 20px;
       overflow: hidden;
@@ -462,6 +460,7 @@
     }
     &-desc {
       height: 0;
+      margin-top: 0;
       opacity: 0;
       transition: height 0.3s ease-in-out, opacity 0.3s ease-in-out, margin-top 0.3s ease-in-out;
       @media(max-width: 1024px) {
