--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   position: relative;
-  border-radius: 35px;
+  border-radius: 35px 35px 0 0;
   background-color: var(--main-blue, $main-blue);
   // overflow: hidden;
   &__container {
@@ -187,7 +187,7 @@
     gap: 80px;
     height: 100%;
     padding: 85px 20px;
-    border-radius: 0px 33px 33px 0px;
+    border-radius: 0px 33px 0 0px;
     color: var(--main-blue, $main-blue);
     background-color: var(--light, $light);
     font-family: Montserrat;
@@ -209,6 +209,9 @@
     @media(max-width: 980px) {
       display: none;
     }
+  }
+  @media(max-width: 767px) {
+    border-radius: 30px 30px 0 0;
   }
 }
 
