--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1024,6 +1024,9 @@
           opacity: 1;
         }
       }
+      @media(max-width: 520px) {
+        width: 100%;
+      }
     }
     &__top {
       display: flex;
@@ -1042,6 +1045,9 @@
       background-color: var(--main-blue, $main-blue);
       opacity: 0.5;
       transition: opacity 0.3s ease-out;
+      @media(max-width: 767px) {
+        opacity: 1;
+      }
     }
     &__price {
       display: flex;
@@ -1079,6 +1085,9 @@
       &:hover {
         color: var(--light, $light);
         background-color: var(--main-blue, $main-blue);
+      }
+      @media(max-width: 767px) {
+        opacity: 1;
       }
     }
   }
