--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -72,6 +72,12 @@
   width: 100%;
   height: 100%;
 }
+.swiper-pagination-bullet {
+  background-color: var(--light, $light);
+}
+.swiper-pagination-bullet-active {
+  background-color: var(--light, $light);
+}
 
 .breadcrumbs {
   padding-top: 90px;
@@ -240,6 +246,52 @@
     width: 100%;
     padding: 35px 32px;
     margin-bottom: 64px;
+  }
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 100px;
+  * {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    line-height: 1;
+  }
+  .prev, .next {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    border: 1px solid var(--dark, $dark);
+  }
+  .current {
+    font-weight: 600;
+  }
+  a {
+    transition: color 0.3s ease-out, border-color 0.3s ease-out;
+    path {
+      transition: fill 0.3s ease-out;
+    }
+    &:hover {
+      border-color: var(--main-yellow, $main-yellow);
+      color: var(--main-yellow, $main-yellow);
+      path {
+        fill: var(--main-yellow, $main-yellow);
+      }
+    }
+  }
+  @media(max-width: 1200px) {
+    margin-top: 80px;
+  }
+  @media(max-width: 1024px) {
+    margin-top: 55px;
+  }
+  @media(max-width: 767px) {
+    margin-top: 32px;
   }
 }
 
@@ -1697,6 +1749,124 @@
 }
 
 .post {
+  &-hero {
+    &__container{
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      height: 42vw;
+      min-height: 400px;
+      max-height: 800px;
+      padding: 45px;
+      border-radius: 25px;
+      @media(max-width: 767px) {
+        padding: 16px;
+        padding-bottom: 64px;
+      }
+    }
+    &__title {
+      position: relative;
+      max-width: 85%;
+      color: var(--light, $light);
+      z-index: 11;
+      br {
+        @media(max-width: 767px) {
+          display: none;
+        }
+      }
+      @media(max-width: 767px) {
+        font-size: 40px;
+        font-weight: 500;
+        line-height: 1.2em;
+      }
+    }
+    &__slider {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 25px;
+      overflow: hidden;
+    }
+    &__slide {
+      position: relative;
+      border-radius: 25px;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.40) 0%, rgba(0, 0, 0, 0.40) 100%);
+
+      }
+    }
+    &-button {
+      top: unset;
+      left: unset;
+      right: 45px;
+      bottom: 45px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 70px;
+      height: 70px;
+      padding: 22px;
+      margin: 0;
+      border-radius: 100%;
+      background-color: var(--light, $light);
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+      &-prev {
+        right: 130px;
+      }
+      @media(max-width: 1024px) {
+        display: none;
+      }
+    }
+    &-pagination {
+      display: none;
+      top: unset !important;
+      bottom: 24px !important;
+      @media(max-width: 1024px) {
+        display: block;
+      }
+    }
+  }
+  &__title {
+    margin-bottom: 55px;
+    text-align: center;
+    @media(max-width: 767px) {
+      margin-bottom: 32px;
+    }
+  }
+  &__cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 20px;
+    row-gap: 55px;
+    @media(max-width: 1024px) {
+      grid-template-columns: repeat(2, 1fr);
+      row-gap: 32px;
+    }
+    @media(max-width: 767px) {
+      grid-template-columns: 1fr;
+      gap: 24px;
+    }
+  }
   &__card {
     position: relative;
     display: flex;
@@ -1712,8 +1882,11 @@
         color: var(--main-yellow, $main-yellow);
       }
     }
-    @media(max-width: 767px) {
+    @media(max-width: 1024px) {
       gap: 24px;
+    }
+    @media(max-width: 767px) {
+      gap: 16px;
     }
   }
   &__date {
@@ -1757,6 +1930,7 @@
     li {
       padding: 10px 30px;
       border-radius: 30px;
+      color: var(--light, $light);
       background: var(--main-yellow, $main-yellow);
       font-size: 16px;
       line-height: 1;
@@ -1764,6 +1938,107 @@
       &:nth-child(even) {
         background: var(--dark, $dark);
       }
+    }
+  }
+  &-inner {
+    &__title {
+      margin-bottom: 24px;
+      @media(max-width: 767px) {
+        margin-bottom: 16px;
+      }
+    }
+    &__meta {
+      margin-bottom: 24px;
+      color: rgba(49, 45, 45, 0.5);
+    }
+    &__img {
+      max-height: 600px;
+      height: 35vw;
+      min-height: 400px;
+      margin-bottom: 55px;
+      border-radius: 20px;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      @media(max-width: 767px) {
+        margin-bottom: 32px;
+      }
+    }
+    &__desc {
+      display: flex;
+      flex-direction: column;
+      gap: 35px;
+      max-width: 1035px;
+      margin: 0 auto;
+      @media(max-width: 767px) {
+        gap: 24px;
+      }
+    }
+    &__share {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      gap: 24px;
+      margin-top: 80px;
+      h5 {
+        font-size: 22px;
+        line-height: 1;
+        @media(max-width: 767px) {
+          font-size: 20px;
+        }
+      }
+      @media(max-width: 1024px) {
+        margin-top: 55px;
+      }
+      @media(max-width: 767px) {
+        margin-top: 32px;
+        gap: 20px;
+      }
+    }
+    &__socials {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+    &__social {
+      width: 25px;
+      height: 25px;
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+      path {
+        transition: fill 0.3s ease-out;
+      }
+      &:hover {
+        path {
+          fill: var(--main-yellow, $main-yellow);
+        }
+      }
+    }
+  }
+}
+
+.other {
+  &__title {
+    margin-bottom: 55px;
+    @media(max-width: 767px) {
+      margin-bottom: 32px;
+    }
+  }
+  &__cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    @media(max-width: 1024px) {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 24px;
+    }
+    @media(max-width: 767px) {
+      grid-template-columns: 1fr;
     }
   }
 }
@@ -2604,5 +2879,155 @@
     @media (max-width: 767px) {
       width: 50px;
     }
+  }
+}
+
+.thanks {
+  &__container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    min-height: 55vh;
+    margin-left: auto;
+    &::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 668px;
+      max-height: 668px;
+      width: 46.4vw;
+      height: 46.4vw;
+      min-width: 393px;
+      min-height: 393px;
+      border-radius: 100%;
+      background: rgba(31, 89, 174, 0.70);
+      filter: blur(100px);
+      z-index: -1;
+    }
+  }
+  &__title {
+    color: var(--light, $light);
+  }
+}
+
+.page-error {
+  &__container {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 25%;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    min-height: 55vh;
+    max-width: 90%;
+    margin-left: auto;
+    &::before {
+      content: '';
+      position: absolute;
+      top: 40%;
+      left: 0;
+      transform: translateY(-50%);
+      max-width: 200px;
+      max-height: 200px;
+      width: 13.8vw;
+      height: 13.8vw;
+      min-width: 100px;
+      min-height: 100px;
+      background: url(../img/tooth-404.svg) center / contain no-repeat;
+      @media (max-width: 1024px) {
+        top: 10%;
+      }
+      @media (max-width: 767px) {
+        left: unset;
+        right: 0;
+      }
+    }
+    @media (max-width: 1024px) {
+      grid-template-columns: 1fr;
+      gap: 55px;
+    }
+    @media (max-width: 767px) {
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+      align-items: flex-start;
+      justify-content: flex-end;
+      min-height: 100vw;
+      max-width: unset;
+    }
+  }
+  &__title {
+    align-self: flex-end;
+    font-size: 300px;
+    font-weight: 500;
+    line-height: 200px;
+    text-align: center;
+    @media (max-width: 1440px) {
+      text-align: end;
+    }
+    @media (max-width: 1200px) {
+      font-size: 250px;
+      line-height: 150px;
+    }
+    @media (max-width: 1024px) {
+      text-align: center;
+    }
+    @media (max-width: 767px) {
+      font-size: 150px;
+      line-height: 1;
+      align-self: unset;
+      text-align: start;
+    }
+  }
+  &__desc {
+    display: flex;
+    flex-direction: column;
+    gap: 55px;
+    @media (max-width: 767px) {
+      gap: 32px;
+    }
+  }
+  &__link {
+    position: relative;
+    justify-content: flex-start;
+    min-width: unset;
+    width: max-content;
+    color: var(--dark, #312D2D);
+    text-align: start;
+    font-weight: 600;
+    &::before, &::after {
+      content: '';
+      position: absolute;
+      top: calc(100% + 10px);
+      left: 0;
+      width: 100%;
+      height: 2px;
+    }
+    &::before {
+      width: 0;
+      background-color: var(--main-blue, $main-blue);
+      transition: width 0.3s ease-out;
+      z-index: 1;
+    }
+    &::after {
+      background-color: var(--dark, $dark);
+    }
+    &:hover {
+      color: var(--main-blue, $main-blue);
+      &::before {
+        width: 100%;
+      }
+    }
+    @media (max-width: 767px) {
+      width: max-content;
+    }
+  }
+  @media (max-width: 767px) {
+    padding: 150px 0;
   }
 }
