--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -68,6 +68,58 @@
   }
 }
 
+.video {
+  position: relative;
+  display: block;
+  height: 635px;
+  border-radius: 20px;
+  overflow: hidden;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%);
+    z-index: -1;
+  }
+  &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 85px;
+    height: 85px;
+    background: url(../img/play.svg) center / contain no-repeat;
+    transition: transform  0.3s ease-out;
+    @media(max-width: 767px) {
+      width: 80px;
+      height: 80px;
+    }
+  }
+  img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -2;
+  }
+  &:hover {
+    &::after {
+      transform: translate(-50%, -50%) scale(1.1);
+    }
+  }
+  @media(max-width: 767px) {
+    height: 491px;
+  }
+}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -1283,57 +1335,6 @@
         margin-bottom: 32px;
       }
     }
-    &__video {
-      position: relative;
-      display: block;
-      height: 635px;
-      border-radius: 20px;
-      overflow: hidden;
-      &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%);
-        z-index: -1;
-      }
-      &::after {
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 85px;
-        height: 85px;
-        background: url(../img/play.svg) center / contain no-repeat;
-        transition: transform  0.3s ease-out;
-        @media(max-width: 767px) {
-          width: 80px;
-          height: 80px;
-        }
-      }
-      img {
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: -2;
-      }
-      &:hover {
-        &::after {
-          transform: translate(-50%, -50%) scale(1.1);
-        }
-      }
-      @media(max-width: 767px) {
-        height: 491px;
-      }
-    }
   }
 }
 
@@ -1605,6 +1606,328 @@
   }
   &__btn {
     width: 100%;
+  }
+  &-page {
+    &__title {
+      margin-bottom: 55px;
+      @media(max-width: 767px) {
+        margin-bottom: 32px;
+      }
+    }
+    &__wrap {
+      display: flex;
+      gap: 32px;
+      @media(max-width: 1024px) {
+        flex-wrap: wrap;
+      }
+      @media(max-width: 767px) {
+        gap: 24px;
+      }
+    }
+    &__img {
+      flex-grow: 1;
+      width: auto;
+      max-height: 461px;
+      height: 32vw;
+      min-height: 252px;
+      border-radius: 10px;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    &__desc {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      gap: 8px;
+      width: calc(30% + 40px);
+      * {
+        flex: 1 1 calc(50% - 4px);
+      }
+      img {
+        width: 100%;
+        height: 245px;
+        border-radius: 10px;
+        object-fit: cover;
+        @media(max-width: 1024px) {
+          width: calc(50% - 4px);
+          height: 139px;
+        }
+      }
+      @media(max-width: 1200px) {
+        width: 40%;
+      }
+      @media(max-width: 1024px) {
+        flex-direction: row;
+        width: 100%;
+      }
+    }
+  }
+}
+
+.indicator {
+  &__box {
+    width: 50%;
+    margin: 0 auto;
+    margin-bottom: 80px;
+    @media(max-width: 1024px) {
+      width: 70%;
+      margin-bottom: 55px;
+    }
+    @media(max-width: 767px) {
+      width: 100%;
+      margin-bottom: 32px;
+    }
+  }
+  &__title {
+    margin-bottom: 35px;
+    font-size: 28px;
+    @media(max-width: 980px) {
+      font-size: 26px;
+    }
+    @media(max-width: 767px) {
+      margin-bottom: 32px;
+      font-size: 24px;
+    }
+  }
+  &__desc {
+    max-width: 600px;
+    @media(max-width: 1440px) {
+      max-width: 465px;
+    }
+  }
+  &__benefits {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    @media(max-width: 767px) {
+      flex-direction: column;
+      max-width: 360px;
+      margin: 0 auto;
+    }
+  }
+  &__benefit {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 209px;
+    height: 209px;
+    padding: 32px;
+    border-radius: 100%;
+    border: 1px solid var(--dark, $dark);
+    text-align: center;
+    @media(max-width: 1024px) {
+      gap: 10px;
+      width: 180px;
+      height: 180px;
+      padding: 16px;
+    }
+    span {
+      max-width: 150px;
+      font-size: 20px;
+      @media(max-width: 1024px) {
+        font-size: 18px;
+      }
+    }
+    .num {
+      max-width: unset;
+      font-family: Montserrat;
+      font-size: 40px;
+      font-weight: 600;
+      line-height: 30px;
+      font-variant-numeric: tabular-nums;
+      @media(max-width: 1024px) {
+        font-size: 35px;
+      }
+    }
+    &.big {
+      width: 295px;
+      height: 295px;
+      @media(max-width: 1024px) {
+        width: 220px;
+        height: 220px;
+      }
+    }
+    &.small {
+      width: 178px;
+      height: 178px;
+      @media(max-width: 1024px) {
+        width: 150px;
+        height: 150px;
+      }
+    }
+    &.blue {
+      border-color: var(--blue, $blue);
+      color: var(--light, $light);
+      background: var(--blue, $blue);
+    }
+    &.yellow {
+      border-color: var(--main-yellow, $main-yellow);
+      color: var(--light, $light);
+      background: var(--main-yellow, $main-yellow);
+    }
+    &:not(:first-child):not(:nth-child(2)) {
+      @media(max-width: 767px) {
+        margin-top: -60px;
+      }
+    }
+    &:nth-child(3) {
+      align-self: flex-end;
+      @media(max-width: 767px) {
+        align-self: unset;
+      }
+    }
+    &:nth-child(even) {
+      @media(max-width: 767px) {
+        align-self: flex-end;
+      }
+    }
+  }
+}
+
+.advantage {
+  &__title {
+    margin-bottom: 55px;
+    @media(max-width: 767px) {
+      margin-bottom: 32px;
+    }
+  }
+  &__img {
+    max-height: 603px;
+    height: 40vw;
+    min-height: 368px;
+    margin-bottom: 70px;
+    border-radius: 20px;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    @media(max-width: 1024px) {
+      margin-bottom: 55px;
+    }
+    @media(max-width: 767px) {
+      margin-bottom: 32px;
+    }
+  }
+  &__cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 150px;
+    row-gap: 80px;
+    width: 75%;
+    margin: 0 auto;
+    @media(max-width: 1200px) {
+      column-gap: 55px;
+      row-gap: 55px;
+    }
+    @media(max-width: 1024px) {
+      width: 100%;
+      column-gap: 32px;
+    }
+    @media(max-width: 767px) {
+      grid-template-columns: 1fr;
+      gap: 32px;
+    }
+  }
+  &__icon {
+    width: 60px;
+    height: 60px;
+    margin-bottom: 24px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+    @media(max-width: 767px) {
+      width: 50px;
+      height: 50px;
+    }
+  }
+  &__caption {
+    margin-bottom: 32px;
+    line-height: 1;
+    @media(max-width: 767px) {
+      margin-bottom: 24px;
+      font-size: 16px;
+    }
+  }
+}
+
+.provide {
+  color: var(--light, $light);
+  background-color: var(--main-blue, $main-blue);
+  &__title {
+    margin-bottom: 55px;
+    text-align: center;
+    @media(max-width: 767px) {
+      margin-bottom: 32px;
+      text-align: start;
+    }
+  }
+  &__cards {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+    @media(max-width: 767px) {
+      gap: 24px;
+    }
+  }
+  &__card {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+    row-gap: 24px;
+    column-gap: 10px;
+    padding-bottom: 35px;
+    border-bottom: 1px solid var(--light, $light);
+    .num {
+      margin-top: 3px;
+      font-family: Montserrat;
+      font-size: 20px;
+      text-transform: uppercase;
+      font-variant-numeric: tabular-nums;
+    }
+    @media(max-width: 1024px) {
+      justify-content: unset;
+      align-items: center;
+    }
+    @media(max-width: 767px) {
+      padding-bottom: 24px;
+    }
+  }
+  &__caption {
+    width: 37.5%;
+    min-width: 230px;
+    font-size: 28px;
+    @media(max-width: 1380px) {
+      width: auto;
+    }
+    @media(max-width: 1200px) {
+      width: min-content;
+    }
+    @media(max-width: 980px) {
+      width: auto;
+      font-size: 26px;
+    }
+    @media(max-width: 767px) {
+      font-size: 24px;
+    }
+  }
+  &__txt {
+    max-width: 650px;
+    margin-left: auto;
+    @media(max-width: 1024px) {
+      max-width: unset;
+      width: 100%;
+    }
   }
 }
 
@@ -2305,6 +2628,185 @@
       position: absolute;
       bottom: 0;
       left: 0;
+    }
+  }
+  &-page {
+    &__top {
+      display: flex;
+      align-items: flex-start;
+      gap: 100px;
+      margin-bottom: 80px;
+      @media(max-width: 1024px) {
+        gap: 55px;
+        margin-bottom: 55px;
+      }
+      @media(max-width: 767px) {
+        gap: 32px;
+        margin-bottom: 32px;
+      }
+    }
+    &__title {
+      width: 28%;
+      font-size: 40px;
+      @media(max-width: 1024px) {
+        width: 100%;
+      }
+      @media(max-width: 980px) {
+        font-size: 36px;
+      }
+      @media(max-width: 767px) {
+        font-size: 28px;
+      }
+    }
+    &__desc {
+      max-width: 385px;
+      @media(max-width: 1024px) {
+        display: none;
+      }
+    }
+    &__btn {
+      margin-left: auto;
+      @media(max-width: 1024px) {
+        display: none;
+      }
+    }
+    &__cards {
+      display: flex;
+      flex-direction: column;
+      gap: 45px;
+    }
+    &__card {
+      position: relative;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: stretch;
+      gap: 40px;
+      padding-bottom: 45px;
+      border-bottom: 1px solid var(--dark, $dark);
+      .num {
+        width: 12.5%;
+        font-size: 20px;
+        line-height: 1;
+        text-transform: uppercase;
+        font-variant-numeric: tabular-nums;
+        @media(max-width: 767px) {
+          width: auto;
+        }
+      }
+      &:first-child {
+        padding-top: 45px;
+        border-top: 1px solid var(--dark, $dark);
+        @media(max-width: 1024px) {
+          padding-top: 32px;
+        }
+        @media(max-width: 767px) {
+          padding-top: 24px;
+        }
+      }
+      @media(max-width: 1024px) {
+        gap: 32px;
+        padding-bottom: 32px;
+      }
+      @media(max-width: 767px) {
+        gap: 24px;
+        padding-bottom: 24px;
+      }
+    }
+    &__box {
+      display: flex;
+      flex-direction: column;
+      width: 25%;
+      @media(max-width: 767px) {
+        width: calc(100% - 50px);
+      }
+    }
+    &__caption {
+      margin-bottom: 32px;
+      @media(max-width: 1024px) {
+        margin-bottom: 24px;
+      }
+      @media(max-width: 767px) {
+        margin-bottom: 16px;
+      }
+    }
+    &__txt {
+      max-width: 320px;
+      margin-bottom: 24px;
+      @media(max-width: 767px) {
+        margin-bottom: 0;
+      }
+    }
+    &__link {
+      display: flex;
+      align-items: flex-end;
+      gap: 5px;
+      font-size: 20px;
+      font-weight: 500;
+      transition: color 0.3s ease-out, gap 0.3s ease-out;
+      path {
+        transition: fill 0.3s ease-out;
+      }
+      &:hover {
+        gap: 8px;
+        color: var(--light-blue, $light-blue);
+        path {
+          fill: var(--light-blue, $light-blue);
+        }
+      }
+      @media(max-width: 767px) {
+        position: absolute;
+        bottom: 32px;
+        right: 0;
+        align-items: unset;
+        font-size: 18px;
+      }
+    }
+    &__video {
+      width: 27%;
+      height: auto;
+      min-height: 193px;
+      max-height: 200px;
+      margin: 0 auto;
+      border-radius: 10px;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      &::after {
+        width: 60px;
+        height: 60px;
+        @media(max-width: 767px) {
+          width: 55px;
+          height: 55px;
+        }
+      }
+      @media(max-width: 767px) {
+        width: 100%;
+      }
+    }
+    &__meta {
+      align-self: flex-start;
+      padding: 10px 15px;
+      border-radius: 25px;
+      border: 1px solid var(--light-blue, $light-blue);
+      color: var(--light-blue, $light-blue);
+      text-transform: uppercase;
+      @media(max-width: 767px) {
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+.invite {
+  &__title {
+    margin-bottom: 55px;
+    text-align: center;
+    @media(max-width: 767px) {
+      margin-bottom: 32px;
+      text-align: start;
     }
   }
 }
