--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -123,12 +123,14 @@
 .swiper {
   width: 100%;
   height: 100%;
-}
-.swiper-pagination-bullet {
-  background-color: var(--light, $light);
-}
-.swiper-pagination-bullet-active {
-  background-color: var(--light, $light);
+  &-pagination {
+    &-bullet {
+      background-color: var(--light, $light);
+      &-active {
+        background-color: var(--light, $light);
+      }
+    }
+  }
 }
 
 .breadcrumbs {
@@ -344,6 +346,100 @@
   }
   @media(max-width: 767px) {
     margin-top: 32px;
+  }
+}
+
+.tabs {
+  display: flex;
+  gap: 10px;
+  padding-bottom: 10px;
+  overflow-y: hidden;
+  overflow-x: scroll;
+}
+
+.tab {
+  padding: 15px;
+  border-radius: 30px;
+  background: transparent;
+  font-family: Montserrat;
+  font-weight: 500;
+  line-height: 1;
+  transition: all 0.3s ease-out;
+  &.active {
+    display: block;
+    color: var(--light, $light);
+    background: var(--main-blue, $main-blue);
+    @media(max-width: 1024px) {
+      border-color: var(--main-blue, $main-blue);
+    }
+  }
+  &:hover:not(.active) {
+    cursor: pointer;
+    color: var(--main-blue, $main-blue);
+    @media(max-width: 767px) {
+      border-color: var(--main-blue, $main-blue);
+    }
+  }
+  @media(max-width: 1024px) {
+    padding: 15px 25px;
+    border: 1px solid var(--dark, $dark);
+    font-size: 20px;
+  }
+  @media(max-width: 767px) {
+    padding: 10px 15px;
+    font-size: 18px;
+  }
+}
+
+.tab-content {
+  &-item {
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 32px;
+    max-width: 100%;
+    &.active {
+      display: flex;
+    }
+  }
+  &-info {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    width: 31.25%;
+    padding: 35px;
+    border-radius: 10px;
+    color: var(--light, $light);
+    background-color: var(--main-blue, $main-blue);
+    @media(max-width: 767px) {
+      gap: 32px;
+      width: 100%;
+    }
+  }
+  &-col {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    line-height: 1;
+    span {
+      color: rgba(255, 255, 255, 0.50);
+    }
+  }
+  &-map {
+    width: 62.5%;
+    max-height: 400px;
+    border-radius: 15px;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    @media(max-width: 767px) {
+      width: 100%;
+      height: 400px;
+      max-height: unset;
+    }
   }
 }
 
@@ -606,6 +702,341 @@
   }
 }
 
+.about {
+  &__top {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 32px;
+    margin-bottom: 55px;
+    @media(max-width: 1024px) {
+      margin-bottom: 32px;
+    }
+    @media(max-width: 767px) {
+      margin-bottom: 24px;
+    }
+  }
+  &__desc {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+    width: 63%;
+    // max-width: 862px;
+    h3 {
+      font-size: 26px;
+      @media(max-width: 1024px) {
+        font-size: 24px;
+      }
+      @media(max-width: 767px) {
+        font-size: 20px;
+      }
+    }
+    @media(max-width: 1024px) {
+      gap: 24px;
+      width: 100%;
+    }
+    @media(max-width: 767px) {
+      gap: 16px;
+    }
+  }
+  &__img {
+    max-height: 500px;
+    height: 34.7vw;
+    min-height: 300px;
+    border-radius: 20px;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+ 
+.assistant {
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 55px;
+    @media(max-width: 767px) {
+      margin-bottom: 32px;
+    }
+  }
+  &__slider {
+    margin-bottom: 55px;
+    @media(max-width: 767px) {
+      margin-bottom: 32px;
+    }
+  }
+  &__card {
+    border-radius: 10px;
+    background-color: var(--light, $light);
+    overflow: hidden;
+    transition: background-color 0.3s ease-out, color 0.3s ease-out;
+    &:nth-child(odd) {
+      .assistant__img {
+        height: 406px;
+        @media(max-width: 767px) {
+          height: 300px;
+        }
+      }
+    }
+    &.swiper-slide-active {
+      @media(max-width: 767px) {
+        color: var(--light, $light);
+        background-color: var(--main-yellow, $main-yellow);
+      }
+    }
+  }
+  &__img {
+    height: 300px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &__box {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    padding: 20px;
+    @media(max-width: 767px) {
+      gap: 10px;
+    }
+  }
+  &__subtitle {
+    font-family: Montserrat;
+    font-weight: 500;
+  }
+  &__txt {
+    color: rgba(49, 45, 45, 0.50);
+    @media(max-width: 767px) {
+      color: var(--light, $light);
+    }
+  }
+  &__btn {
+    min-width: 477px;
+    margin: 0 auto;
+    @media(max-width: 767px) {
+      min-width: unset;
+    }
+  }
+  &__arrows {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+  &-button {
+    width: 50px;
+    height: 50px;
+    padding: 12px;
+    border-radius: 100%;
+    border: 1px solid var(--dark, $dark);
+    pointer-events: all;
+    svg {
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+    }
+    &.swiper-button-disabled {
+      opacity: 0.5;
+      pointer-events: none;
+    }
+    @media(max-width: 767px) {
+      width: 40px;
+      height: 40px;
+      padding: 10px;
+    }
+  }
+}
+
+.social-feed {
+  &__title {
+    margin-bottom: 55px;
+    @media(max-width: 767px) {
+      margin-bottom: 32px;
+    }
+  }
+  &__cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    @media(max-width: 1024px) {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 24px;
+    }
+    @media(max-width: 767px) {
+      grid-template-columns: 1fr;
+    }
+  }
+  &__card {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 15px;
+    background: var(--light, $light);
+  }
+  &__img {
+    max-height: 279px;
+    height: 19.3vw;
+    min-height: 185px;
+    margin-bottom: 25px;
+    border-radius: 15px;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &__caption {
+    margin-bottom: 50px;
+    @media(max-width: 767px) {
+      margin-bottom: 32px;
+    }
+  }
+  &__bottom {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    gap: 24px;
+    @media(max-width: 767px) {
+      gap: 16px;
+    }
+  }
+  &__date {
+    color: rgba(49, 45, 45, 0.50);
+  }
+  &__btn {
+    opacity: 0.5;
+    transition: opacity  0.3s ease-out;
+    &:hover {
+      opacity: 1;
+      color: var(--light, $light);
+      background-color: var(--main-blue, $main-blue);
+    }
+    @media(max-width: 767px) {
+      flex-grow: 1;
+      width: auto;
+      min-width: unset;
+      padding: 20px;
+      font-size: 16px;
+      opacity: 1;
+    }
+  }
+}
+
+.follow {
+  &__container {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    gap: 32px;
+    @media(max-width: 767px) {
+      padding-bottom: 82px;
+    }
+  }
+  &__box {
+    width:calc(50% - 32px);
+    @media(max-width: 767px) {
+      width: 100%;
+    }
+  }
+  &__title {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 25px;
+    max-width: 600px;
+    margin-bottom: 55px;
+    font-weight: 500;
+    strong {
+      color: var(--main-blue, $main-blue);
+      font-weight: 600;
+    }
+    @media(max-width: 1024px) {
+      align-items: flex-start;
+    }
+    @media(max-width: 767px) {
+      gap: 0;
+      margin-bottom: 32px;
+      line-height: 1.1em;
+    }
+  }
+  &__desc {
+    max-width: 600px;
+    margin-bottom: 50px;
+    @media(max-width: 1440px) {
+      max-width: 478px;
+      margin-bottom: 0;
+    }
+  }
+  &__socials {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    @media(max-width: 1200px) {
+      gap: 32px;
+    }
+    @media(max-width: 980px) {
+      gap: 24px;
+    }
+    @media(max-width: 767px) {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      gap: 10px;
+    }
+  }
+  &__social {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 500;
+    transition: color 0.3s ease-out;
+    .icon {
+      width: 50px;
+      height: 50px;
+      padding: 15px;
+      border-radius: 100%;
+      background-color: var(--main-blue, $main-blue);
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    span {
+      @media(max-width: 767px) {
+        display: none;
+      }
+    }
+    &:hover {
+      color: var(--main-blue, $main-blue);
+    }
+  }
+  &__video {
+    width: 50%;
+    max-height: 384px;
+    min-height: 285px;
+    &::after {
+      width: 50px;
+      height: 50px;
+      background: url(../img/youtube.svg) center / contain no-repeat;
+      @media(max-width: 767px) {
+        width: 50px;
+        height: 50px;
+      }
+    }
+    @media(max-width: 767px) {
+      width: 100%;
+    }
+  }
+}
+
 .services {
   position: relative;
   color: var(--light, $light);
@@ -850,6 +1281,26 @@
       @media(max-width: 767px) {
         gap: 32px;
         margin-bottom: 24px;
+      }
+    }
+    &__tabs {
+      .tab {
+        color: var(--dark, $dark);
+        border: 1px solid var(--dark, $dark);
+        font-size: 22px;
+        &.active {
+          color: var(--light, $light);
+          border-color: var(--main-blue, $main-blue);
+        }
+        &:hover {
+          border-color: var(--main-blue, $main-blue);
+        }
+        @media(max-width: 1024px) {
+          font-size: 20px;
+        }
+        @media(max-width: 767px) {
+          font-size: 18px;
+        }
       }
     }
     &__desc {
@@ -1395,10 +1846,13 @@
           transform: rotate(-180deg);
         }
       }
+      @media(max-width: 1024px) {
+        font-size: 24px;
+      }
       @media(max-width: 767px) {
         max-width: 90%;
         padding-bottom: 16px;
-        font-size: 22px;
+        font-size: 20px;
       }
     }
     &-col {
@@ -2765,7 +3219,7 @@
       width: 27%;
       height: auto;
       min-height: 193px;
-      max-height: 200px;
+      // max-height: 200px;
       margin: 0 auto;
       border-radius: 10px;
       overflow: hidden;
@@ -3327,10 +3781,14 @@
         }
       }
     }
-    @media (max-width: 767px) {
+    @media (max-width: 1024px) {
       gap: 24px;
       min-height: unset;
       padding: 24px;
+    }
+    @media (max-width: 767px) {
+      gap: 16px;
+      padding: 16px;
     }
   }
   &__title {
@@ -3346,8 +3804,11 @@
         margin-left: auto;
         font-weight: 600;
       }
-      @media (max-width: 767px) {
+      @media (max-width: 1024px) {
         font-size: 28px;
+      }
+      @media (max-width: 767px) {
+        font-size: 24px;
       }
     }
     @media (max-width: 767px) {
@@ -3359,8 +3820,11 @@
     font-size: 26px;
     font-weight: 700;
     line-height: 1;
-    @media (max-width: 767px) {
+    @media (max-width: 1024px) {
       font-size: 22px;
+    }
+    @media (max-width: 767px) {
+      font-size: 20px;
     }
   }
   &__txt {
@@ -3380,6 +3844,43 @@
     border: 1px solid var(--light, $light);
     @media (max-width: 767px) {
       width: 50px;
+    }
+  }
+}
+
+.contacts {
+  &__title {
+    margin-bottom: 55px;
+    @media (max-width: 767px) {
+      margin-bottom: 32px;
+    }
+  }
+  &__tabs {
+    gap: 50px;
+    margin-bottom: 35px;
+    @media(max-width: 1024px) {
+      gap: 32px;
+    }
+    @media(max-width: 980px) {
+      gap: 24px;
+    }
+    @media(max-width: 767px) {
+      gap: 10px;
+    }
+    .tab {
+      font-size: 24px;
+      text-transform: uppercase;
+      color: rgba(60, 79, 109, 0.50);
+      &.active {
+        color: var(--light, $light);
+      }
+      @media(max-width: 1024px) {
+        color: var(--dark, $dark);
+        font-size: 20px;
+      }
+      @media(max-width: 767px) {
+        font-size: 18px;
+      }
     }
   }
 }
