--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -116,23 +116,23 @@
       background-color: var(--light, $light);
     }
   }
-  &__cites {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    svg {
-      width: 20px;
-      height: 20px;
-    }
-    select {
-      padding: 0;
-      border: 0;
-      background-color: transparent;
-      &:focus {
-        outline: none;
-      }
-    }
-  }
+  // &__cites {
+  //   display: flex;
+  //   align-items: center;
+  //   gap: 5px;
+  //   svg {
+  //     width: 20px;
+  //     height: 20px;
+  //   }
+  //   select {
+  //     padding: 0;
+  //     border: 0;
+  //     background-color: transparent;
+  //     &:focus {
+  //       outline: none;
+  //     }
+  //   }
+  // }
   &__menu {
     display: flex;
     align-items: center;
@@ -260,4 +260,96 @@
     background-color: var(--bg, $bg);
     box-shadow: 0 0 24px rgba(34, 30, 31, 0.08);
   }
+}
+
+.cities-select {
+	position: relative;
+	display: block;
+  min-width: 112px;
+  width: fit-content;
+  list-style: none;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: calc(100% + 5px);
+    transform: translateY(-50%);
+    width: 20px;
+    height: 20px;
+    background: url(../img/location.svg) center / contain no-repeat;
+  }
+}
+.cities-select ul {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  display: none;
+  width: fit-content;
+  padding: 25px;
+  border-radius: 20px;
+  color: var(--light, $light);
+  background-color: var(--main-blue, $main-blue);
+}
+.cities-select li {
+  display: block;
+  margin-bottom: 15px;
+  &:last-child {
+    margin-bottom: 0;
+  }
+  &.active {
+    pointer-events: none;
+    font-weight: 600;
+  }
+}
+.cities-select a {
+  display: block;
+  -webkit-transition: all .3s ease;
+      -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+      -o-transition: all .3s ease;
+      transition: all .3s ease;
+  text-decoration: none;
+}
+.cities-select a:focus,
+.cities-select a:hover {
+  font-weight: 600;
+}
+.cities-select div {
+  display: block;
+  cursor: pointer;
+  position: relative;
+  padding-right: 24px;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--blue, $blue);
+  background: none;
+}
+.cities-select div:after {
+  content: '';
+  position: absolute;
+  right: 6px;
+  top: 50%;
+  margin-top: -2px;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="9px" height="6px"><path fill-rule="evenodd"  fill="rgb(13, 37, 72)" d="M8.997,1.059 L5.463,4.938 L5.464,4.938 L4.500,5.996 L3.536,4.938 L3.536,4.938 L0.003,1.059 L0.967,0.001 L4.500,3.880 L8.033,0.001 L8.997,1.059 Z"/></svg>');
+  width: 9px;
+  height: 6px;
+  -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+  -webkit-transition: transform .3s ease;
+      -moz-transition: transform .3s ease;
+    -ms-transition: transform .3s ease;
+      -o-transition: transform .3s ease;
+      transition: transform .3s ease;
+}
+.cities-select.open div:after {
+  -webkit-transform: rotate(180deg);
+      -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+      -o-transform: rotate(180deg);
+      transform: rotate(180deg);
 }
