--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3922,6 +3922,20 @@
         }
       }
     }
+    &::after {
+      content: none;
+      position: absolute;
+      bottom: 24px;
+      right: 24px;
+      width: 32px;
+      height: 32px;
+      background: url(../img/swipe.png) center / contain no-repeat;
+      z-index: 1;
+      animation: move 1s linear infinite;
+      @media (max-width: 767px) {
+        content: '';
+      }
+    }
     @media (max-width: 980px) {
       padding: 30px;
     }
@@ -4019,6 +4033,27 @@
       bottom: 0;
       left: 0;
     }
+  }
+}
+
+@keyframes move {
+  0% {
+    transform: translateX(10px);
+  }
+  25% {
+    transform: translateX(0);
+  }
+
+  50% {
+    transform: translateX(-10px);
+  }
+
+  75% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(10px);
   }
 }
 
