--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1818,6 +1818,7 @@
   }
   &-combo {
     position: relative;
+    overflow: hidden;
     &::before, &::after {
       content: '';
       position: absolute;
@@ -1843,10 +1844,23 @@
       filter: blur(107px);
 
     }
+    &__top {
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+      margin-bottom: 55px;
+      @media(max-width: 767px) {
+        margin-bottom: 32px;
+      }
+    }
+    .swiper {
+      overflow: visible;
+    }
     &__title {
       margin-bottom: 55px;
       @media(max-width: 767px) {
         margin-bottom: 32px;
+        font-size: 24px;
       }
     }
     &__card {
@@ -1871,7 +1885,7 @@
         width: 100%;
       }
     }
-    &__top {
+    &__heading {
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -1931,6 +1945,33 @@
       }
       @media(max-width: 767px) {
         opacity: 1;
+      }
+    }
+    &__arrows {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+    &-button {
+      width: 50px;
+      height: 50px;
+      padding: 12px;
+      border-radius: 100%;
+      border: 1px solid var(--dark, $dark);
+      pointer-events: all;
+      svg {
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+      }
+      &.swiper-button-disabled {
+        opacity: 0.5;
+        pointer-events: none;
+      }
+      @media(max-width: 767px) {
+        width: 40px;
+        height: 40px;
+        padding: 10px;
       }
     }
   }
